--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
+  "testEnvironment": "node",
   "newrelic": "latest",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index.js",
     "build": "parcel build index.js"
   },
@@ -14,6 +15,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-prom-bundle": "^6.6.0",
+    "jest": "^29.7.0",
     "parcel": "^2.1.0",
     "prom-client": "^15.0.0",
     "winston": "^3.11.0",
